switched to java 1.8